
PIG-3444: CONCAT with 2+ input parameters fail (lbendig via daijy)

PIG-3529: Upgrade HBase dependency from 0.95-SNAPSHOT to 0.96 (jarcec via daijy)

PIG-3117: A debug mode in which pig does not delete temporary files (ihadanny via cheolsoo)

PIG-3484: Make the size of pig.script property configurable (cheolsoo)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-2132: [Piggybank] MIN and MAX functions should ignore nulls (rekhajoshm via cheolsoo)

PIG-3581: Incorrect scope resolution with nested foreach (aniket486)

PIG-3285: Jobs using HBaseStorage fail to ship dependency jars (ndimiduk via cheolsoo)

PIG-3582: Document SUM, MIN, MAX, and AVG functions for BigInteger and BigDecimal (harichinnan via cheolsoo)

PIG-3525: PigStats.get() and ScriptState.get() shouldn't return MR-specific objects (cheolsoo)

PIG-3568: Define the semantics of POStatus.STATUS_NULL (mwagner via cheolsoo)

PIG-3561: Clean up PigStats and JobStats after PIG-3419 (cheolsoo)

PIG-3553: HadoopJobHistoryLoader fails to load job history on hadoop v 1.2 (lgiri via cheolsoo)

PIG-3559: Trunk is broken by PIG-3522 (cheolsoo)

PIG-3551: Minor typo on pig latin basics page (elserj via aniket486)

PIG-3526: Unions with Enums do not work with AvroStorage (jadler via cheolsoo)

PIG-3377: New AvroStorage throws NPE when storing untyped map/array/bag (jadler via cheolsoo)

PIG-3542: Javadoc of REGEX_EXTRACT_ALL (nyigitba via daijy)

PIG-3518: Need to ship jruby.jar in the release (daijy)

PIG-3516: pig does not bring in joda-time as dependency in its pig-template.xml (daijy)

PIG-3524: Clean up Launcher and MapReduceLauncher after PIG-3419 (cheolsoo)

PIG-3515: Shell commands are limited from OS buffer (andronat via cheolsoo)

PIG-3520: Provide backward compatibility for PigRunner and PPNL after PIG-3419 (daijy via cheolsoo)

PIG-3519: Remove dependency on uber avro-tools jar (jarcec via cheolsoo)

PIG-3451: EvalFunc<T> ctor reflection to determine value of type param T is brittle (hazen via aniket486)
